# Moments

./: .gitignore  README.md
Parte2_HOG/: Makefile  Prediccion.cpp  Principal.cpp  svm_logo.xml
momentos/: settings.gradle.kts
momentos/app/: build.gradle.kts
momentos/app/src/androidTest/java/ec/edu/ups/momentos/: ExampleInstrumentedTest.java
momentos/app/src/main/: AndroidManifest.xml
momentos/app/src/main/assets/: momentos.csv
momentos/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
momentos/app/src/main/java/ec/edu/ups/momentos/: DrawView.java  MainActivity.java
momentos/app/src/main/res/layout/: activity_main.xml
momentos/app/src/main/res/values/: strings.xml  themes.xml
momentos/app/src/main/res/values-night/: themes.xml
momentos/app/src/test/java/ec/edu/ups/momentos/: ExampleUnitTest.java
momentos/gradle/wrapper/: gradle-wrapper.properties
preparacion/: Makefile  Principal.cpp  Principal_V1.cpp  Principal_V2.cpp  figureshu.csv  momentos_csv.cpp  momentos_hu.csv
